--- a/archives/toutiao-search/2024-04-11.md
+++ b/archives/toutiao-search/2024-04-11.md
@@ -1,48 +1,69 @@
 # 2024-04-11
 
-共 189 条
+共 207 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 11 2024 12:00:34 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 11 2024 13:00:43 GMT+0800 (China Standard Time) -->
+1. [俞敏洪沉浸式西藏自驾之旅](https://so.toutiao.com/search?keyword=俞敏洪沉浸式西藏自驾之旅)
 1. [韩国总理等多名高官同时请辞](https://so.toutiao.com/search?keyword=韩国总理等多名高官同时请辞)
-1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
 1. [300兆瓦级压气储能电站并网发电](https://so.toutiao.com/search?keyword=300兆瓦级压气储能电站并网发电)
+1. [律师：拍裸照女子或处至少5日行拘](https://so.toutiao.com/search?keyword=律师：拍裸照女子或处至少5日行拘)
+1. [重庆一高层居民楼起火 伤亡不明](https://so.toutiao.com/search?keyword=重庆一高层居民楼起火+伤亡不明)
+1. [黄金白银集体跳水](https://so.toutiao.com/search?keyword=黄金白银集体跳水)
+1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
 1. [媒体：“根浴”必须根治](https://so.toutiao.com/search?keyword=媒体：“根浴”必须根治)
 1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
-1. [黄金白银集体跳水](https://so.toutiao.com/search?keyword=黄金白银集体跳水)
-1. [网友晒27岁旧冰箱被厂家赠新冰箱](https://so.toutiao.com/search?keyword=网友晒27岁旧冰箱被厂家赠新冰箱)
-1. [律师：拍裸照女子或处至少5日行拘](https://so.toutiao.com/search?keyword=律师：拍裸照女子或处至少5日行拘)
-1. [俞敏洪沉浸式西藏自驾之旅](https://so.toutiao.com/search?keyword=俞敏洪沉浸式西藏自驾之旅)
-1. [38岁女硕士称只有农村单身汉追求](https://so.toutiao.com/search?keyword=38岁女硕士称只有农村单身汉追求)
 1. [尹锡悦或提早变“跛鸭总统”](https://so.toutiao.com/search?keyword=尹锡悦或提早变“跛鸭总统”)
-1. [女子多次从10楼抛排泄物被拘役](https://so.toutiao.com/search?keyword=女子多次从10楼抛排泄物被拘役)
+1. [武大开设雷军班 100%具备保研资格](https://so.toutiao.com/search?keyword=武大开设雷军班+100%具备保研资格)
+1. [网友晒27岁旧冰箱被厂家赠新冰箱](https://so.toutiao.com/search?keyword=网友晒27岁旧冰箱被厂家赠新冰箱)
 1. [北京一二代社保卡将停用？假的](https://so.toutiao.com/search?keyword=北京一二代社保卡将停用？假的)
-1. [莫迪称中印应抓紧解决边界问题](https://so.toutiao.com/search?keyword=莫迪称中印应抓紧解决边界问题)
-1. [一线城市老破小价格泡沫跌到5%](https://so.toutiao.com/search?keyword=一线城市老破小价格泡沫跌到5%)
+1. [上海阿姨谈婚姻困境：男性更可怜](https://so.toutiao.com/search?keyword=上海阿姨谈婚姻困境：男性更可怜)
+1. [实习交警练习手势的样子笨拙又可爱](https://so.toutiao.com/search?keyword=实习交警练习手势的样子笨拙又可爱)
+1. [女子多次从10楼抛排泄物被拘役](https://so.toutiao.com/search?keyword=女子多次从10楼抛排泄物被拘役)
+1. [韩国高官为何同时请辞](https://so.toutiao.com/search?keyword=韩国高官为何同时请辞)
+1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
+1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
 1. [文在寅发了句中文“尽人事待天命”](https://so.toutiao.com/search?keyword=文在寅发了句中文“尽人事待天命”)
+1. [一线城市老破小价格泡沫跌到5%](https://so.toutiao.com/search?keyword=一线城市老破小价格泡沫跌到5%)
+1. [莫迪称中印应抓紧解决边界问题](https://so.toutiao.com/search?keyword=莫迪称中印应抓紧解决边界问题)
+1. [黄金牛市还能延续多久](https://so.toutiao.com/search?keyword=黄金牛市还能延续多久)
+1. [伊朗即将对以色列发动大规模袭击吗](https://so.toutiao.com/search?keyword=伊朗即将对以色列发动大规模袭击吗)
+1. [马云退休5年都在做什么](https://so.toutiao.com/search?keyword=马云退休5年都在做什么)
+1. [38岁女硕士称只有农村单身汉追求](https://so.toutiao.com/search?keyword=38岁女硕士称只有农村单身汉追求)
+1. [战争状态下以色列国内暗流涌动](https://so.toutiao.com/search?keyword=战争状态下以色列国内暗流涌动)
+1. [农村建房工人坠亡 家属索赔160万](https://so.toutiao.com/search?keyword=农村建房工人坠亡+家属索赔160万)
+1. [连休四天的“壮族三月三”是什么节](https://so.toutiao.com/search?keyword=连休四天的“壮族三月三”是什么节)
+1. [欧冠1/4决赛首回合仅巴黎主场输球](https://so.toutiao.com/search?keyword=欧冠1/4决赛首回合仅巴黎主场输球)
+1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
 1. [代理农民工讨薪案的女律师被捕](https://so.toutiao.com/search?keyword=代理农民工讨薪案的女律师被捕)
-1. [男子一次性卖5公斤黄金变现270多万](https://so.toutiao.com/search?keyword=男子一次性卖5公斤黄金变现270多万)
-1. [荣耀回应小米道歉：不必三次](https://so.toutiao.com/search?keyword=荣耀回应小米道歉：不必三次)
+1. [媒体评李贵富落马：反腐离不开监督](https://so.toutiao.com/search?keyword=媒体评李贵富落马：反腐离不开监督)
+1. [小伙骑改装电动车上路被拦拒下车](https://so.toutiao.com/search?keyword=小伙骑改装电动车上路被拦拒下车)
+1. [小宝宝为躲避打针装睡叫不醒](https://so.toutiao.com/search?keyword=小宝宝为躲避打针装睡叫不醒)
+1. [岸田：美日将协调应对“中国挑战”](https://so.toutiao.com/search?keyword=岸田：美日将协调应对“中国挑战”)
 1. [飞天茅台收购价跌破2500元/瓶](https://so.toutiao.com/search?keyword=飞天茅台收购价跌破2500元/瓶)
-1. [高校院长校内遇车祸去世](https://so.toutiao.com/search?keyword=高校院长校内遇车祸去世)
-1. [云游广西三月三](https://so.toutiao.com/search?keyword=云游广西三月三)
+1. [荣耀回应小米道歉：不必三次](https://so.toutiao.com/search?keyword=荣耀回应小米道歉：不必三次)
+1. [19岁男子5年看几百部虐猫视频](https://so.toutiao.com/search?keyword=19岁男子5年看几百部虐猫视频)
+1. [家长质疑班主任发学生课间喝奶视频](https://so.toutiao.com/search?keyword=家长质疑班主任发学生课间喝奶视频)
+1. [男子一次性卖5公斤黄金变现270多万](https://so.toutiao.com/search?keyword=男子一次性卖5公斤黄金变现270多万)
+1. [“零首付”能让更多人愿意买车吗](https://so.toutiao.com/search?keyword=“零首付”能让更多人愿意买车吗)
+1. [小米回应车内摄像头能否关闭](https://so.toutiao.com/search?keyword=小米回应车内摄像头能否关闭)
+1. [曝赖清德“小圈子”第二批人员确定](https://so.toutiao.com/search?keyword=曝赖清德“小圈子”第二批人员确定)
+1. [拜登夫妇与岸田夫妇晚宴伴随警报声](https://so.toutiao.com/search?keyword=拜登夫妇与岸田夫妇晚宴伴随警报声)
 1. [原广州军区司令员李希林上将逝世](https://so.toutiao.com/search?keyword=原广州军区司令员李希林上将逝世)
+1. [高校院长校内遇车祸去世](https://so.toutiao.com/search?keyword=高校院长校内遇车祸去世)
+1. [五菱星光EV预售10.98万元起](https://so.toutiao.com/search?keyword=五菱星光EV预售10.98万元起)
+1. [朱婷率斯坎迪奇女排冲击冠军](https://so.toutiao.com/search?keyword=朱婷率斯坎迪奇女排冲击冠军)
+1. [红海局势或加剧也门人道主义危机](https://so.toutiao.com/search?keyword=红海局势或加剧也门人道主义危机)
+1. [云游广西三月三](https://so.toutiao.com/search?keyword=云游广西三月三)
 1. [烈士牺牲时手中紧握一张照片](https://so.toutiao.com/search?keyword=烈士牺牲时手中紧握一张照片)
 1. [现在黄金和股票哪个投资风险高](https://so.toutiao.com/search?keyword=现在黄金和股票哪个投资风险高)
-1. [韩国高官为何同时请辞](https://so.toutiao.com/search?keyword=韩国高官为何同时请辞)
-1. [连休四天的“壮族三月三”是什么节](https://so.toutiao.com/search?keyword=连休四天的“壮族三月三”是什么节)
-1. [小宝宝为躲避打针装睡叫不醒](https://so.toutiao.com/search?keyword=小宝宝为躲避打针装睡叫不醒)
 1. [拜登又现口误：选我吧我活在20世纪](https://so.toutiao.com/search?keyword=拜登又现口误：选我吧我活在20世纪)
-1. [上海阿姨谈婚姻困境：男性更可怜](https://so.toutiao.com/search?keyword=上海阿姨谈婚姻困境：男性更可怜)
-1. [拜登夫妇与岸田夫妇晚宴伴随警报声](https://so.toutiao.com/search?keyword=拜登夫妇与岸田夫妇晚宴伴随警报声)
 1. [女子医院照顾男友 男友妈妈叫她滚](https://so.toutiao.com/search?keyword=女子医院照顾男友+男友妈妈叫她滚)
 1. [学生追忆车祸离世院长](https://so.toutiao.com/search?keyword=学生追忆车祸离世院长)
 1. [公职人员承认殴打酒店老板](https://so.toutiao.com/search?keyword=公职人员承认殴打酒店老板)
-1. [岸田：美日将协调应对“中国挑战”](https://so.toutiao.com/search?keyword=岸田：美日将协调应对“中国挑战”)
 1. [杭州一女子吐槽自己成优质大龄剩女](https://so.toutiao.com/search?keyword=杭州一女子吐槽自己成优质大龄剩女)
 1. [外媒：美方将6个中国实体列入管制清单](https://so.toutiao.com/search?keyword=外媒：美方将6个中国实体列入管制清单)
 1. [俄罗斯40%油气出口使用人民币结算](https://so.toutiao.com/search?keyword=俄罗斯40%油气出口使用人民币结算)
-1. [黄金牛市还能延续多久](https://so.toutiao.com/search?keyword=黄金牛市还能延续多久)
 1. [墨西哥一代理市长被民众扣押](https://so.toutiao.com/search?keyword=墨西哥一代理市长被民众扣押)
 1. [乌通过世界银行获得310亿美元援助](https://so.toutiao.com/search?keyword=乌通过世界银行获得310亿美元援助)
 1. [华盛顿发生枪击 6人中弹含2名儿童](https://so.toutiao.com/search?keyword=华盛顿发生枪击+6人中弹含2名儿童)
@@ -52,8 +73,6 @@
 1. [一天打落3名院长 医药反腐有新动向](https://so.toutiao.com/search?keyword=一天打落3名院长+医药反腐有新动向)
 1. [黄金市场震荡 后续走势如何](https://so.toutiao.com/search?keyword=黄金市场震荡+后续走势如何)
 1. [澳大利亚将考虑承认巴勒斯坦国](https://so.toutiao.com/search?keyword=澳大利亚将考虑承认巴勒斯坦国)
-1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
-1. [朱婷率斯坎迪奇女排冲击冠军](https://so.toutiao.com/search?keyword=朱婷率斯坎迪奇女排冲击冠军)
 1. [韩国国务总理等多名高官同时请辞](https://so.toutiao.com/search?keyword=韩国国务总理等多名高官同时请辞)
 1. [多个数据回升 折射经济向好态势](https://so.toutiao.com/search?keyword=多个数据回升+折射经济向好态势)
 1. [尹锡悦面临弹劾风险](https://so.toutiao.com/search?keyword=尹锡悦面临弹劾风险)
@@ -96,7 +115,6 @@
 1. [学生追忆车祸离世院长：幸运遇到](https://so.toutiao.com/search?keyword=学生追忆车祸离世院长：幸运遇到)
 1. [生父起诉人贩子和养母索赔180万](https://so.toutiao.com/search?keyword=生父起诉人贩子和养母索赔180万)
 1. [美国通胀“降温”进展似乎停滞不前](https://so.toutiao.com/search?keyword=美国通胀“降温”进展似乎停滞不前)
-1. [家长质疑班主任发学生课间喝奶视频](https://so.toutiao.com/search?keyword=家长质疑班主任发学生课间喝奶视频)
 1. [法土带头制裁以色列或将引示范效应](https://so.toutiao.com/search?keyword=法土带头制裁以色列或将引示范效应)
 1. [广西三月三主会场非遗展示活动开幕](https://so.toutiao.com/search?keyword=广西三月三主会场非遗展示活动开幕)
 1. [花莲地震死亡人数上升至16人](https://so.toutiao.com/search?keyword=花莲地震死亡人数上升至16人)
