--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,54 +1,74 @@
 # 2024-04-12
 
-共 73 条
+共 90 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 02:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 12 2024 03:00:36 GMT+0800 (China Standard Time) -->
 1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
-1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
+1. [中国买家为何大量取消美澳小麦订单](https://so.toutiao.com/search?keyword=中国买家为何大量取消美澳小麦订单)
 1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
-1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
-1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
 1. [外交部回应莫迪中印关系表态](https://so.toutiao.com/search?keyword=外交部回应莫迪中印关系表态)
-1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
-1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
-1. [大润发全国闭店十几家](https://so.toutiao.com/search?keyword=大润发全国闭店十几家)
-1. [中方回应美国“拉黑”4家中企](https://so.toutiao.com/search?keyword=中方回应美国“拉黑”4家中企)
-1. [业主自掏腰包拆了50年老楼重建](https://so.toutiao.com/search?keyword=业主自掏腰包拆了50年老楼重建)
-1. [俄袭击乌克兰后北约战机紧急起飞](https://so.toutiao.com/search?keyword=俄袭击乌克兰后北约战机紧急起飞)
-1. [“根浴”医院老板曾从富翁变老赖](https://so.toutiao.com/search?keyword=“根浴”医院老板曾从富翁变老赖)
-1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
-1. [换表后燃气费暴增？重庆市监局回应](https://so.toutiao.com/search?keyword=换表后燃气费暴增？重庆市监局回应)
+1. [医生：男性“根浴”易染病](https://so.toutiao.com/search?keyword=医生：男性“根浴”易染病)
+1. [不明生物尸体被冲上马来西亚海滩](https://so.toutiao.com/search?keyword=不明生物尸体被冲上马来西亚海滩)
+1. [马英九返台重提“九二共识”](https://so.toutiao.com/search?keyword=马英九返台重提“九二共识”)
 1. [哈马斯领导人得知儿孙身亡表现冷静](https://so.toutiao.com/search?keyword=哈马斯领导人得知儿孙身亡表现冷静)
+1. [拜登称“将用核武器保护日本”](https://so.toutiao.com/search?keyword=拜登称“将用核武器保护日本”)
+1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
+1. [姐妹俩涉嫌从事非法经营活动被抓获](https://so.toutiao.com/search?keyword=姐妹俩涉嫌从事非法经营活动被抓获)
+1. [余承东谈车载手机支架 雷军回应](https://so.toutiao.com/search?keyword=余承东谈车载手机支架+雷军回应)
 1. [李在明：选择我就是对尹锡悦的审判](https://so.toutiao.com/search?keyword=李在明：选择我就是对尹锡悦的审判)
-1. [战争状态下以色列国内暗流涌动](https://so.toutiao.com/search?keyword=战争状态下以色列国内暗流涌动)
+1. [香格里拉地震致数百人受伤不实](https://so.toutiao.com/search?keyword=香格里拉地震致数百人受伤不实)
+1. [小米SU7车主跑滴滴](https://so.toutiao.com/search?keyword=小米SU7车主跑滴滴)
+1. [男子因债务自杀 幼子能继承遗产吗](https://so.toutiao.com/search?keyword=男子因债务自杀+幼子能继承遗产吗)
+1. [韩国总理等多名高官同时请辞](https://so.toutiao.com/search?keyword=韩国总理等多名高官同时请辞)
+1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
 1. [张颂文说还没去提小米SU7](https://so.toutiao.com/search?keyword=张颂文说还没去提小米SU7)
-1. [中方反制参与对台售武的相关美企](https://so.toutiao.com/search?keyword=中方反制参与对台售武的相关美企)
+1. [中方回应美国“拉黑”4家中企](https://so.toutiao.com/search?keyword=中方回应美国“拉黑”4家中企)
 1. [女子赤身大闹男生宿舍 警方介入](https://so.toutiao.com/search?keyword=女子赤身大闹男生宿舍+警方介入)
 1. [美国富翁用儿子血浆给自己换血抗衰](https://so.toutiao.com/search?keyword=美国富翁用儿子血浆给自己换血抗衰)
-1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
+1. [俄袭击乌克兰后北约战机紧急起飞](https://so.toutiao.com/search?keyword=俄袭击乌克兰后北约战机紧急起飞)
+1. [中方反制参与对台售武的相关美企](https://so.toutiao.com/search?keyword=中方反制参与对台售武的相关美企)
+1. [美防长：我是俄罗斯人也不愿乌入约](https://so.toutiao.com/search?keyword=美防长：我是俄罗斯人也不愿乌入约)
+1. [“根浴”医院老板曾从富翁变老赖](https://so.toutiao.com/search?keyword=“根浴”医院老板曾从富翁变老赖)
 1. [乌方称基辅州最大热电站被俄军摧毁](https://so.toutiao.com/search?keyword=乌方称基辅州最大热电站被俄军摧毁)
-1. [女子接到研究生补录电话后泪崩](https://so.toutiao.com/search?keyword=女子接到研究生补录电话后泪崩)
-1. [大V：李兰娟家族企业为何越来越赚钱](https://so.toutiao.com/search?keyword=大V：李兰娟家族企业为何越来越赚钱)
-1. [小米SU7赛道首撞当事人发声](https://so.toutiao.com/search?keyword=小米SU7赛道首撞当事人发声)
-1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
-1. [浙江一男子持铁锤袭警](https://so.toutiao.com/search?keyword=浙江一男子持铁锤袭警)
-1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
+1. [莫迪称中印应抓紧解决边界问题](https://so.toutiao.com/search?keyword=莫迪称中印应抓紧解决边界问题)
+1. [华为公布HarmonyOS 4.2升级计划](https://so.toutiao.com/search?keyword=华为公布HarmonyOS+4.2升级计划)
+1. [换表后燃气费暴增？重庆市监局回应](https://so.toutiao.com/search?keyword=换表后燃气费暴增？重庆市监局回应)
+1. [胡锡进参加黄帝故里拜祖大典](https://so.toutiao.com/search?keyword=胡锡进参加黄帝故里拜祖大典)
+1. [哈马斯领导人的3个儿子被以军打死](https://so.toutiao.com/search?keyword=哈马斯领导人的3个儿子被以军打死)
+1. [乌称俄向乌发射40枚导弹40架无人机](https://so.toutiao.com/search?keyword=乌称俄向乌发射40枚导弹40架无人机)
+1. [马英九结束大陆参访行程返台](https://so.toutiao.com/search?keyword=马英九结束大陆参访行程返台)
+1. [新版智界S7售24.98万元起](https://so.toutiao.com/search?keyword=新版智界S7售24.98万元起)
 1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
+1. [外媒：美方将6个中国实体列入管制清单](https://so.toutiao.com/search?keyword=外媒：美方将6个中国实体列入管制清单)
+1. [余承东全程未提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东全程未提“遥遥领先”)
+1. [华为MateBook X Pro应用盘古大模型](https://so.toutiao.com/search?keyword=华为MateBook+X Pro应用盘古大模型)
+1. [“零首付”能让更多人愿意买车吗](https://so.toutiao.com/search?keyword=“零首付”能让更多人愿意买车吗)
+1. [如何看待耶伦指责中国工业产能过剩](https://so.toutiao.com/search?keyword=如何看待耶伦指责中国工业产能过剩)
+1. [乌克兰全境拉响防空警报](https://so.toutiao.com/search?keyword=乌克兰全境拉响防空警报)
+1. [美记者称以总理甘愿冒险与伊朗开战](https://so.toutiao.com/search?keyword=美记者称以总理甘愿冒险与伊朗开战)
+1. [大学生租车因3毫米划痕被索赔7万](https://so.toutiao.com/search?keyword=大学生租车因3毫米划痕被索赔7万)
+1. [俄边境泄漏放射物铯137到底是啥](https://so.toutiao.com/search?keyword=俄边境泄漏放射物铯137到底是啥)
+1. [商务部：美方应立即停止对中企打压](https://so.toutiao.com/search?keyword=商务部：美方应立即停止对中企打压)
+1. [菲律宾总统小马科斯抵达华盛顿](https://so.toutiao.com/search?keyword=菲律宾总统小马科斯抵达华盛顿)
+1. [韩在野党阵营在国会议员选举中获胜](https://so.toutiao.com/search?keyword=韩在野党阵营在国会议员选举中获胜)
+1. [医保部门从未规定单次住院不超15天](https://so.toutiao.com/search?keyword=医保部门从未规定单次住院不超15天)
+1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
+1. [大润发全国闭店十几家](https://so.toutiao.com/search?keyword=大润发全国闭店十几家)
+1. [业主自掏腰包拆了50年老楼重建](https://so.toutiao.com/search?keyword=业主自掏腰包拆了50年老楼重建)
+1. [战争状态下以色列国内暗流涌动](https://so.toutiao.com/search?keyword=战争状态下以色列国内暗流涌动)
+1. [女子接到研究生补录电话后泪崩](https://so.toutiao.com/search?keyword=女子接到研究生补录电话后泪崩)
+1. [小米SU7赛道首撞当事人发声](https://so.toutiao.com/search?keyword=小米SU7赛道首撞当事人发声)
+1. [浙江一男子持铁锤袭警](https://so.toutiao.com/search?keyword=浙江一男子持铁锤袭警)
 1. [5岁女孩与英歌队一起表演自信满满](https://so.toutiao.com/search?keyword=5岁女孩与英歌队一起表演自信满满)
 1. [媒体：“根浴”必须根治](https://so.toutiao.com/search?keyword=媒体：“根浴”必须根治)
-1. [华为MateBook X Pro应用盘古大模型](https://so.toutiao.com/search?keyword=华为MateBook+X Pro应用盘古大模型)
-1. [放射学专家刘德华逝世 享年100岁](https://so.toutiao.com/search?keyword=放射学专家刘德华逝世+享年100岁)
-1. [“零首付”能让更多人愿意买车吗](https://so.toutiao.com/search?keyword=“零首付”能让更多人愿意买车吗)
 1. [几百吨的飞机是如何起飞的](https://so.toutiao.com/search?keyword=几百吨的飞机是如何起飞的)
 1. [女生重病之际仍不忘完成学业](https://so.toutiao.com/search?keyword=女生重病之际仍不忘完成学业)
 1. [美日首脑在白宫谈了大概2小时](https://so.toutiao.com/search?keyword=美日首脑在白宫谈了大概2小时)
-1. [美防长：我是俄罗斯人也不愿乌入约](https://so.toutiao.com/search?keyword=美防长：我是俄罗斯人也不愿乌入约)
 1. [马斯克公布太空轨道日全食视角](https://so.toutiao.com/search?keyword=马斯克公布太空轨道日全食视角)
 1. [台退将：两岸要和平统一](https://so.toutiao.com/search?keyword=台退将：两岸要和平统一)
 1. [台湾青年随马英九来大陆收获了什么](https://so.toutiao.com/search?keyword=台湾青年随马英九来大陆收获了什么)
 1. [岸田发言时口误将盟国美国说成中国](https://so.toutiao.com/search?keyword=岸田发言时口误将盟国美国说成中国)
-1. [胡锡进参加黄帝故里拜祖大典](https://so.toutiao.com/search?keyword=胡锡进参加黄帝故里拜祖大典)
 1. [余承东：鸿蒙智能座舱无需手机支架](https://so.toutiao.com/search?keyword=余承东：鸿蒙智能座舱无需手机支架)
 1. [黄磊坦承已经两年多没拍戏](https://so.toutiao.com/search?keyword=黄磊坦承已经两年多没拍戏)
 1. [小米SU7被路特斯追尾](https://so.toutiao.com/search?keyword=小米SU7被路特斯追尾)
@@ -59,10 +79,8 @@
 1. [余承东：纯燃油车非常不经济](https://so.toutiao.com/search?keyword=余承东：纯燃油车非常不经济)
 1. [男子在高架桥戴头盔趴在滑板上滑行](https://so.toutiao.com/search?keyword=男子在高架桥戴头盔趴在滑板上滑行)
 1. [500万的黄金和房产 20年后谁更值钱](https://so.toutiao.com/search?keyword=500万的黄金和房产+20年后谁更值钱)
-1. [美记者称以总理甘愿冒险与伊朗开战](https://so.toutiao.com/search?keyword=美记者称以总理甘愿冒险与伊朗开战)
 1. [小车失控撞人又撞墙 最后落入河中](https://so.toutiao.com/search?keyword=小车失控撞人又撞墙+最后落入河中)
 1. [余承东：新版智界S7开启海量交付](https://so.toutiao.com/search?keyword=余承东：新版智界S7开启海量交付)
-1. [菲律宾总统小马科斯抵达华盛顿](https://so.toutiao.com/search?keyword=菲律宾总统小马科斯抵达华盛顿)
 1. [武大开设雷军班100%保研](https://so.toutiao.com/search?keyword=武大开设雷军班100%保研)
 1. [江苏一高校五一不调休放九天假](https://so.toutiao.com/search?keyword=江苏一高校五一不调休放九天假)
 1. [女子银行转账等一个多小时急的大哭](https://so.toutiao.com/search?keyword=女子银行转账等一个多小时急的大哭)
@@ -75,6 +93,5 @@
 1. [赵丽颖林更新还原与凤行名场面](https://so.toutiao.com/search?keyword=赵丽颖林更新还原与凤行名场面)
 1. [18岁哥哥带着4岁妹妹打工相依为命](https://so.toutiao.com/search?keyword=18岁哥哥带着4岁妹妹打工相依为命)
 1. [深圳景区海上漂浮尸体 警方介入](https://so.toutiao.com/search?keyword=深圳景区海上漂浮尸体+警方介入)
-1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
 1. [特朗普在炸鸡店为全场买单](https://so.toutiao.com/search?keyword=特朗普在炸鸡店为全场买单)
 <!-- END TOUTIAO -->
